--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a href="#" class="nav-menu__list-item">о нас</a>
                         <a href="#" class="nav-menu__list-item">услуги</a>
                         <div class="nav-menu__logo">
-                            <img src="/dist/images/logo.png" alt="logo">
+                            <img src="./dist/images/logo.png" alt="logo">
                         </div>
                         <a href="#" class="nav-menu__list-item">отзывы</a>
                         <a href="#" class="nav-menu__list-item">контакты</a>
